@@ -13,6 +13,8 @@ sed -e "s/LibVNCServer, [^,)]*\([(,]\)*/x11vnc, $VERSION\1/g" \
     -e "s/\(contrib\|examples\|vncterm\|test\|client_examples\)\/Makefile//g" \
     -e "s/LibVNCServer.spec/x11vnc.spec/g" \
     -e "s/AC_PROG_LIBTOOL/AC_PROG_RANLIB/" \
+    -e "s/PKG_CHECK/#PKG_CHECK/" \
+    -e 's/if test "x$with_gnutls/with_gnutls=no; if test "x$with_gnutls/' \
 > configure.ac
 
 mv Makefile.am Makefile.am.LibVNCServer
