@@ -160,9 +160,9 @@ char *list_clients(void) {
          * <id>:<ip>:<port>:<user>:<unix>:<hostname>:<input>:<loginview>:<time>,
 	 * 8+1+64+1+5+1+24+1+24+1+256+1+5+1+1+1+10+1
 	 * 123.123.123.123:60000/0x11111111-rw,
-	 * so count+1 * 500 must cover it.
+	 * so count+1 * 1000 must cover it.
 	 */
-	list = (char *) malloc((count+1)*500);
+	list = (char *) malloc((count+1)*1000);
 	
 	list[0] = '\0';
 
