@@ -2,7 +2,7 @@
 .TH X11VNC "1" "May 2010" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.9.11, lastmod: 2010-05-02
+         version: 0.9.11, lastmod: 2010-05-08
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
